--- a/app.config.json
+++ b/app.config.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "AwesomeProject",
-    "slug": "AwesomeProject",
+    "name": "TickTock",
+    "slug": "TickTock",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -28,6 +28,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "apiKey": "process.env.API_KEY",
+      "authDomain": "process.env.AUTH_DOMAIN",
+      "projectId": "process.env.PROJECT_ID",
+      "storageBucket": "process.env.STORAGE_BUCKET",
+      "messagingSenderId": "process.env.MESSAGING_SENDER_ID",
+      "appId": "process.env.APP_ID"
     }
   }
 }
