--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^16.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.3",
+    "dotenv": "^16.0.3",
     "expo": "~46.0.16",
+    "expo-constants": "^13.2.4",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.13.0",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gifted-chat": "^1.0.4",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
